# nrf5-sdk

./: README.md  meson.build  patch.py
subprojects/: .gitignore  nRF5_SDK_15.3.0_59ac345.wrap  nrf5-llvm.wrap
subprojects/packagefiles/: nRF5_SDK_15.3.0_59ac345-add-meson.patch  nrf5-llvm-add-meson.patch
